<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/editor"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/magic_wand"
        android:drawablePadding="-20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/editor"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitSite" />

    <Button
        android:id="@+id/camera"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/camera"
        android:drawablePadding="-20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitSite" />

    <Button
        android:id="@+id/collage"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/collage"
        android:drawablePadding="-20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/collage"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album" />

    <Button
        android:id="@+id/more"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/play_1"
        android:drawablePadding="-20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policy" />

    <Button
        android:id="@+id/policy"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/policy"
        android:drawablePadding="-20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/policy"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editor" />

    <Button
        android:id="@+id/album"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/album"
        android:drawablePadding="-20dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/album"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera" />

    <TextView
        android:id="@+id/photoEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quantico"
        android:text="@string/photo_editor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoEditor"
        app:srcCompat="@drawable/ads_image" />

    <TextView
        android:id="@+id/visitSite"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/visit_site"
        android:gravity="center"
        android:text="@string/visit_site"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="145dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/white_background"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/face_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="Text Ad: SONGYOY \n sump sump"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="390dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/introduction"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/visitSite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/ads"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@color/ads"
        android:fontFamily="@font/roboto_light"
        android:text="@string/ads"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</android.support.constraint.ConstraintLayout>